--- a/fuel pumper interface/pumper interface.html
+++ b/fuel pumper interface/pumper interface.html
@@ -29,7 +29,7 @@
         <div class="col-md-8">
             <div class="card-body">
                 <form>
-                    <div class="1">
+                    <div class="clsss1">
                         <label>Fuel Amount - </label>
                         <label for="Fuel-amount"></label><input class="liters" id="Fuel-amount" placeholder="Liters" type="number">
                     </div>
