--- a/fuel pumper interface/pumper interface.html
+++ b/fuel pumper interface/pumper interface.html
@@ -16,6 +16,15 @@
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Fuel Management System</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="">Logout</a>
+            </div>
+        </div>
     </div>
 </nav>
 
@@ -79,45 +88,45 @@
     </div>
 </div>
 
-<script>
+<!--<script>-->
 
-   const btn = document.getElementById('Petrol 92');
+<!--   const btn = document.getElementById('Petrol 92');-->
 
-   btn.addEventListener('click', function onClick() {
-       btn.style.backgroundColor = 'salmon';
-       btn.style.color = 'white';
+<!--   btn.addEventListener('click', function onClick() {-->
+<!--       btn.style.backgroundColor = 'salmon';-->
+<!--       btn.style.color = 'white';-->
 
-   });
+<!--   });-->
 
-   const btn1 = document.getElementById('Petrol 95');
+<!--   const btn1 = document.getElementById('Petrol 95');-->
 
-   btn1.addEventListener('click', function onClick() {
-       btn1.style.backgroundColor = 'salmon';
-       btn1.style.color = 'white';
-   });
+<!--   btn1.addEventListener('click', function onClick() {-->
+<!--       btn1.style.backgroundColor = 'salmon';-->
+<!--       btn1.style.color = 'white';-->
+<!--   });-->
 
-   const btn3 = document.getElementById('Diesel');
+<!--   const btn3 = document.getElementById('Diesel');-->
 
-   btn3.addEventListener('click', function onClick() {
-       btn3.style.backgroundColor = 'salmon';
-       btn3.style.color = 'white';
-   });
+<!--   btn3.addEventListener('click', function onClick() {-->
+<!--       btn3.style.backgroundColor = 'salmon';-->
+<!--       btn3.style.color = 'white';-->
+<!--   });-->
 
-   const btn4 = document.getElementById('Super Diesel');
+<!--   const btn4 = document.getElementById('Super Diesel');-->
 
-   btn4.addEventListener('click', function onClick() {
-       btn4.style.backgroundColor = 'salmon';
-       btn4.style.color = 'white';
-   });
+<!--   btn4.addEventListener('click', function onClick() {-->
+<!--       btn4.style.backgroundColor = 'salmon';-->
+<!--       btn4.style.color = 'white';-->
+<!--   });-->
 
-   const btn5 = document.getElementById('Kerosene');
+<!--   const btn5 = document.getElementById('Kerosene');-->
 
-   btn5.addEventListener('click', function onClick() {
-       btn5.style.backgroundColor = 'salmon';
-       btn5.style.color = 'white';
-   });
+<!--   btn5.addEventListener('click', function onClick() {-->
+<!--       btn5.style.backgroundColor = 'salmon';-->
+<!--       btn5.style.color = 'white';-->
+<!--   });-->
 
-</script>
+<!--</script>-->
 
 </body>
 </html>
